--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1,120 +1,292 @@
-html,
-body {
-    height: 100%;
-}
-
-.wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
-}
-
-.wrap > .container {
-    padding: 70px 15px 20px;
-}
-
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
-
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
+#user-search-pjax {
     position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
 }
 
-a.asc:after {
-    content: "\e151";
+.search-result {
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    top: 36px;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
-a.desc:after {
-    content: "\e152";
+.search-result ul.contacts {
+    box-shadow: 0px 8px 29px -4px #B1B1B1;
+    border: 1px solid #D2D6DE;
+    background: #FFFFFF;
 }
 
-.sort-numerical a.asc:after {
-    content: "\e153";
+.search-result ul.contacts .empty{
+    padding: 10px;
 }
 
-.sort-numerical a.desc:after {
-    content: "\e154";
+.inner-loading {
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    background: url("../images/ajax-loader.gif") no-repeat center;
 }
 
-.sort-ordinal a.asc:after {
-    content: "\e155";
+.inner-loading.no-result {
+    background: none;
 }
 
-.sort-ordinal a.desc:after {
-    content: "\e156";
+.inner-loading.no-result:before {
+    content: 'No messages yet...';
 }
 
-.grid-view td {
-    white-space: nowrap;
+
+
+
+/*
+
+Табы Чаты и Друзья
+
+*/
+
+.list-tabs {
+
 }
 
-.grid-view .filters input,
-.grid-view .filters select {
-    min-width: 50px;
+.list-tabs li {
+    width: 50%;
+    margin-left: 0!important;
+    margin-right: 0!important;
 }
 
-.hint-block {
+.skin-blue .nav-tabs-custom > .nav-tabs > li.active {
+    border-top-color: #3c8dbc;
+}
+
+.skin-blue .nav-tabs-custom > .nav-tabs > li.active > a,
+.skin-blue .nav-tabs-custom > .nav-tabs > li.active:hover > a {
+    background-color: #222d32;
+    color: #fff;
+}
+
+.skin-blue .nav-tabs-custom > .nav-tabs > li {
+    border-top: 3px solid #5f5f5f;
+}
+
+.skin-blue .nav-tabs-custom > .nav-tabs > li > a,
+.skin-blue .nav-tabs-custom > .nav-tabs > li > a:hover {
+    background: #222d32;
+}
+
+.skin-blue .nav-tabs-custom > .tab-content {
+    background: #222d32;
+}
+
+.skin-blue .nav-tabs-custom > .nav-tabs > li.active > a {
+    border-top-color: #222d32;
+    border-left-color: #222d32;
+    border-right-color: #222d32;
+}
+
+.skin-blue .search-result ul.contacts {
+    box-shadow: 0px 8px 29px -4px #000000;
+    border: 1px solid #374850;
+    background: #374850;
+}
+
+.skin-blue .search-result .user-icon-container {
+    background: #222d32;
+}
+
+.skin-blue .nav-tabs-custom > .nav-tabs > li > a {
+    color: #949494;
+}
+
+.list-tabs li.active a,
+.list-tabs li.active a:focus,
+.list-tabs li.active a:active,
+.list-tabs li a,
+.list-tabs li a:focus,
+.list-tabs li a:active{
+    box-shadow: none!important;
+    border-radius: 0!important;
+    outline: none!important;
+}
+
+.list-tabs li a{
+
+}
+
+.list-tabs li a .badge {
+    top: 4px;
+    right: 5px;
+}
+
+.new-day-structure {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    background-color: #f5f5f5;
+    height: 1px;
+    /*margin-bottom: 5px;*/
+    border-left: 51px solid #fff;
+    border-right: 51px solid #fff;
+}
+
+.new-day-structure div {
+    position: absolute;
+    top: -11px;
+    text-align: center;
+    width: 100%;
+}
+
+.new-day-structure span{
+    color: #ADADAD;
+    padding: 0 10px;
+    font-size: 11px;
+    background: #fff;
+}
+
+.new-day-structure span i.left {
+    margin-left: -5px;
+    margin-right: 5px;
+}
+
+.new-day-structure span i.right {
+    margin-right: -5px;
+    margin-left: 5px;
+}
+
+.loader {
+    text-align: center;
+    position: absolute;
+    width: 90%;
+    top: 11px;
+}
+
+.msg-container {
+    position: relative;
+    padding: 35px;
+    padding-top: 25px;
+}
+
+.message-item {
+    padding-bottom: 5px;
+}
+
+.msg-container.overflowHidden {
+    overflow: hidden;
+}
+
+.message  {
+    position: relative;
+}
+
+.message .direct-chat-text {
+    cursor: pointer;
+}
+
+.message.removed .direct-chat-text {
+    color: #ADADAD;
+}
+
+.message.right.removed .direct-chat-text {
+    color: #A1BDCE;
+}
+
+.message .checked-button {
+    display: none;
+    position: absolute;
+    bottom: 5px;
+    left: -25px;
+}
+
+.message .checked-button i {
+    color: #dedede;
+}
+
+.message.checked-message .checked-button i {
+    color: #1c1c1c;
+}
+
+.message:hover .checked-button,
+.message.checked-message .checked-button {
     display: block;
-    margin-top: 5px;
-    color: #999;
 }
 
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
+.message-actions {
+    display: none;
 }
 
-/* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
+.message-actions.active {
+    display: block;
+}
+
+.action-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.action-button button {
     border: none;
+    box-shadow: none!important;
+    background: none;
 }
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
+.skin-black-light .main-header .navbar-nav > li a.custom-nav-bar-link {
+    display: block;
+    padding: 10px 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    line-height: 20px;
 }
 
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
+.navbar-nav .messages-menu .dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
-.nav > li > form > button.logout:focus {
-    outline: none;
+.no-results {
+    text-align: center;
+    font-size: 12px;
+    color: #465d68;
+    margin: 10px 0;
+}
+
+.sidebar-menu li.header {
+    padding: 5px 0;
+    text-align: center;
+    border-bottom: 1px dashed #434b4e;
+    background: transparent!important;
+}
+
+.new-message-label {
+    display: none;
+}
+
+li.chat-item.new_message .new-message-label  {
+    display: block;
+    padding-top: 4px;
+}
+
+.chat-notice {
+    display: block;
+    text-align: center;
+    font-size: 12px;
+}
+
+.slimScrollRail {
+    /*height: 97%!important;*/
+    /*top: 6px!important;*/
+    right: 10px!important;
+}
+
+.slimScrollBar {
+    right: 10px!important;
+}
+
+.field-message-message {
+    margin-bottom: 0;
 }
